src/objects/Lead_Attribute__c.object
<CustomObject>
    <fields>
        <fullName>Activity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Lead_Scoring_Points</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Criteria__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Criteria</label>
        <referenceTo>Lead_Scoring_Bucket_Criteria__c</referenceTo>
        <relationshipLabel>Lead Attributes</relationshipLabel>
        <relationshipName>Lead_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Scoring_Bucket__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Scoring Bucket</label>
        <referenceTo>Lead_Scoring_Bucket__c</referenceTo>
        <relationshipName>Lead_Scoring_Points</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Lead_Scoring_Points_del1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Attribute_Id__c</fullName>
        <label>Original Attribute Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_ID__c</fullName>
        <formula>IF(ISBLANK(Lead__c),Contact__r.Id, Lead__r.Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Points__c</fullName>
        <label>Points</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Lead Attribute</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Activity__c</columns>
        <columns>Contact__c</columns>
        <columns>Criteria__c</columns>
        <columns>End_Time__c</columns>
        <columns>Lead__c</columns>
        <columns>Lead_Scoring_Bucket__c</columns>
        <columns>Original_Attribute_Id__c</columns>
        <columns>Parent_ID__c</columns>
        <columns>Points__c</columns>
        <columns>Start_Time__c</columns>
        <columns>Value__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Lead Scoring Point Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Lead_Field_is_required_to_do_an_insert</fullName>
        <active>true</active>
        <description>Every lead scoring point should be linked to lead</description>
        <errorConditionFormula>ISBLANK(Lead__c) &amp;&amp; ISBLANK(Contact__c)</errorConditionFormula>
        <errorMessage>Lead Or Contact is required to create a new lead scoring point</errorMessage>
    </validationRules>
</CustomObject>